--- a/style.css
+++ b/style.css
@@ -63,7 +63,8 @@
 }
 body
 {
-    font-family:consolas;
+    /* font-family:consolas; */
+    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
     background: rgb(10, 25, 47);
 }
 .logo
@@ -215,7 +216,7 @@ nav
     {
         position: relative;
         width:30px;
-        height:3px;
+        height:2px;
         background: rgb(100, 255, 218);
         margin: 5px;
         transition: .3s linear;
