--- a/style.css
+++ b/style.css
@@ -319,11 +319,14 @@ nav
         margin-left: 52px;
         color: rgb(100, 255, 218);
     }
-    /* #about
+    #name1
     {
-        padding: 80px 0px;
-        margin:60px 60px;
-    } */
+        font-size:3.5em;
+    }
+    #name2
+    {
+        font-size:2.5em;
+    }
 }    
 nav #marker
 {
@@ -344,13 +347,15 @@ nav #marker
     margin:90px;
     padding:130px;
     display:flex;
-    margin-top: 50px;
+    margin-top: 180px;
     margin-bottom: 10px;
     justify-content: center;
     align-items: center;
     background-image:url(img/shreya.jpg);
     background-size: contain;
     background-repeat: no-repeat;
+    transition: .3s linear;
+    border:1px solid rgb(100, 255, 218);
 }
 .color
 {
@@ -697,6 +702,7 @@ p
     border-radius: 4px;;
     padding:15px 25px 15px 25px;
     margin-top:50px;
+    margin-bottom:20px;
     font-weight:200;
     letter-spacing: 1px;;
 }
