--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body
     position: absolute;
     margin-left:-20px;
     margin-bottom:0px;
-    margin-top:10px;
+    margin-top:20px;
     padding:25px;
     margin-right: auto;
     background-image:url(img/logo2.png);
@@ -136,8 +136,9 @@ nav
 {
     color:rgb(100, 255, 218);
     margin:15px;
-    padding-top:15px;
+    padding-top:5px;
     font-size:13px;
+    margin-bottom:20px;
 }
 .nav-links li a
 {
@@ -990,7 +991,7 @@ footer
    .cards
    {
        margin-left:100px;
-       margin-right:100px;
+       margin-right:80px;
    }
     
 }
@@ -999,7 +1000,7 @@ footer
    .cards
    {
        margin-left:60px;
-       margin-right:60px;
+       margin-right:50px;
    }
     
 }
